tests/agl/rejections/type/required_after_defaulted.agl
def f(x: int = 0, y: int) -> int = x + y
print(f(y = 1))
